processed/jira/txt/LU/LU-6547.txt
Key:        LU-6547
Summary:    build errors building against recent 4.1-rc1 kernel on Ubuntu 15.04 building linux-tracefile
Link:       https://jira.whamcloud.com/browse/LU-6547
Type:       Bug
Priority:   Major
Status:     Resolved
Resolution: Duplicate
Assignee:   WC Triage
Reporter:   Colin Ian King
Created:    Thu, 30 Apr 2015 13:12:50 +0000
Updated:    Wed, 5 Aug 2015 14:17:14 +0000
Resolved:   Wed, 5 Aug 2015 14:17:14 +0000
Links:      Related: is related to  LU-5628; Related: is related to  LU-6215

--- Description ---
Building against a recent kernel the -Werror option in the Rules file is catching a re-definition of  CONFIG_LNET_MAX_PAYLOAD and causing the build to fail.

make[3]: Entering directory '/usr/src/linux-headers-4.1.0-rc1+'

  LD      /home/king/lustre/lustre-release/built-in.o

  LD      /home/king/lustre/lustre-release/libcfs/built-in.o

  LD      /home/king/lustre/lustre-release/libcfs/libcfs/built-in.o

  CC [M]  /home/king/lustre/lustre-release/libcfs/libcfs/linux/linux-tracefile.o

In file included from :0:0:

/home/king/lustre/lustre-release/config.h:26:0: error: "CONFIG_LNET_MAX_PAYLOAD" redefined [-Werror]

 #define CONFIG_LNET_MAX_PAYLOAD LNET_MTU

 ^

In file included from /usr/src/linux-headers-4.1.0-rc1+/include/linux/kconfig.h:4:0,

                 from :0:

include/generated/autoconf.h:4174:0: note: this is the location of the previous definition

 #define CONFIG_LNET_MAX_PAYLOAD 1048576

 ^

cc1: all warnings being treated as errors

scripts/Makefile.build:258: recipe for target '/home/king/lustre/lustre-release/libcfs/libcfs/linux/linux-tracefile.o' failed

--- Comment (pjones, Wed, 5 Aug 2015 14:17:14 +0000) ---
ok - thanks James

--- Comment (simmonsja, Wed, 5 Aug 2015 13:39:17 +0000) ---
All patches for Ubuntu15 support have landed. This ticket reported the same problems as LU-5628 so it can be now closed as a duplicate.

--- Comment (simmonsja, Fri, 19 Jun 2015 12:54:30 +0000) ---
Only one patch needed to support Ubuntu15 - http://review.whamcloud.com/#/c/15028

--- Comment (simmonsja, Mon, 1 Jun 2015 18:29:08 +0000) ---
The need the following patches applied to master to run on Ubuntu15:

http://review.whamcloud.com/#/c/14598

http://review.whamcloud.com/#/c/14669

http://review.whamcloud.com/#/c/14683

http://review.whamcloud.com/#/c/14681

http://review.whamcloud.com/#/c/15028

http://review.whamcloud.com/#/c/14624

--- Comment (simmonsja, Thu, 28 May 2015 19:35:27 +0000) ---
I have submitted all the patches needed to support Ubuntu15 now. With those patches also kernels up to 4.0 are supported.

Colin do you have a gerrit account so I can add you to review the patches needed.

--- Comment (simmonsja, Fri, 15 May 2015 22:40:22 +0000) ---
I have submitted a bunch of patches for Ubuntu15 support. Only thing left is handle filldir_t api changes and generic_file_aio_XX changes.

--- Comment (simmonsja, Fri, 1 May 2015 00:41:44 +0000) ---
Yep, its the tip of the iceberg. If you want to build the intel branch against 4.1-rc1 you will a bunch more patches just to make it work. See LU-6215 for details about that work.

--- Comment (green, Thu, 30 Apr 2015 17:23:23 +0000) ---
The problem at hand is you probably have lustre configured i nthe kernel as a module or something, and this is not supported due to all sort of symbol clases, I suspect this is just a tip of the iceberg you are seeing here.

If you want to build out of tree lustre, the in-tree lustre client should be disabled.
